include/astral_rt.h


typedef struct AstralSpanU8 {
    const uint8_t* data;
    uint32_t len;
#if defined(__LP64__) || defined(_WIN64) || (defined(__SIZEOF_POINTER__) && __SIZEOF_POINTER__ == 8)
    uint32_t _padding;  
#endif
} AstralSpanU8;
typedef struct AstralMutSpanU8 {
    uint8_t* data;
    uint32_t len;
#if defined(__LP64__) || defined(_WIN64) || (defined(__SIZEOF_POINTER__) && __SIZEOF_POINTER__ == 8)
    uint32_t _padding;  
#endif
} AstralMutSpanU8;
typedef uint64_t AstralHandle;
#define ASTRAL_LOGPROBS_MAX 16u
typedef int32_t AstralErr;
typedef uint64_t AstralCaps;
typedef struct AstralModelLimits {
    uint32_t vocab_size;
    uint32_t ctx_size;
    uint32_t max_batch;  
    uint32_t max_slots;  
} AstralModelLimits;
ASTRAL_API AstralErr ASTRAL_CALL astral_model_caps(AstralHandle model, AstralCaps* out_caps);
ASTRAL_API AstralErr ASTRAL_CALL astral_model_limits(AstralHandle model, AstralModelLimits* out_limits);
ASTRAL_API AstralErr ASTRAL_CALL astral_model_embedding_dim(AstralHandle model, uint32_t* out_dim);
ASTRAL_API AstralErr ASTRAL_CALL astral_tokenize(
    AstralHandle model,
    AstralSpanU8 text,
    int32_t* out_tokens,
    uint32_t max_tokens,
    uint8_t add_special,
    uint8_t parse_special,
    uint32_t* out_count
);
ASTRAL_API AstralErr ASTRAL_CALL astral_detokenize(
    AstralHandle model,
    const int32_t* tokens,
    uint32_t count,
    AstralMutSpanU8 out_text,
    uint32_t* out_len
);
typedef struct AstralSessionDesc {
    AstralHandle model;        
    uint32_t max_tokens;       
    float temperature;         
    uint32_t top_k;            
    float top_p;               
    uint8_t stream_enabled;    
    uint8_t _padding0[3];
    uint32_t seed;             
} AstralSessionDesc;
typedef struct AstralSamplerDesc {
    uint32_t size;              
    float temperature;          
    uint32_t top_k;             
    float top_p;                
    float min_p;                
    float typical_p;            
    float repeat_penalty;       
    int32_t repeat_last_n;      
    uint8_t penalize_nl;        
    uint8_t _padding0[3];
    float presence_penalty;     
    float frequency_penalty;    
    uint32_t mirostat;          
    float mirostat_tau;         
    float mirostat_eta;         
} AstralSamplerDesc;
typedef struct AstralTokenMeta {
    uint32_t token_id;
    uint32_t top_n; 
    float logprob;  
    uint32_t top_token_ids[ASTRAL_LOGPROBS_MAX];
    float top_logprobs[ASTRAL_LOGPROBS_MAX];
} AstralTokenMeta;
typedef struct AstralAdapterDesc {
    uint32_t size;      
    AstralSpanU8 path;  
} AstralAdapterDesc;
typedef uint32_t AstralSessionState;
ASTRAL_API AstralErr ASTRAL_CALL astral_session_cancel(AstralHandle session);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_state(AstralHandle session, AstralSessionState* out_state);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_wait(AstralHandle session, uint32_t timeout_ms);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_reset(AstralHandle session, const AstralSessionDesc* desc);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_set_sampler(AstralHandle session, const AstralSamplerDesc* desc);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_penalty_prompt_set_tokens(
    AstralHandle session,
    const int32_t* tokens,
    uint32_t count
);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_stop_clear(AstralHandle session);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_stop_add_utf8(AstralHandle session, AstralSpanU8 utf8);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_stop_set_utf8(
    AstralHandle session,
    const AstralSpanU8* seqs,
    uint32_t count
);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_set_logprobs(AstralHandle session, uint32_t n_probs);
ASTRAL_API int32_t ASTRAL_CALL astral_stream_read_meta(
    AstralHandle session,
    AstralTokenMeta* out_events,
    uint32_t capacity,
    uint32_t timeout_ms
);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_state_size(AstralHandle session, uint64_t* out_bytes);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_state_save(
    AstralHandle session,
    AstralMutSpanU8 out_buf,
    uint64_t* out_written
);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_state_load(AstralHandle session, AstralSpanU8 state_bytes);
ASTRAL_API AstralErr ASTRAL_CALL astral_model_adapter_load(
    AstralHandle model,
    const AstralAdapterDesc* desc,
    AstralHandle* out_adapter
);
ASTRAL_API void ASTRAL_CALL astral_model_adapter_release(AstralHandle adapter);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_adapters_clear(AstralHandle session);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_adapters_add(AstralHandle session, AstralHandle adapter, float scale);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_set_grammar_gbnf(AstralHandle session, AstralSpanU8 gbnf, AstralSpanU8 root);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_set_grammar_json_schema(AstralHandle session, AstralSpanU8 json_schema);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_clear_grammar(AstralHandle session);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_set_slot(AstralHandle session, uint32_t slot_id);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_create(const AstralSessionDesc* desc, AstralHandle* out_session);
ASTRAL_API void ASTRAL_CALL astral_session_destroy(AstralHandle session);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_feed(AstralHandle session, AstralSpanU8 prompt_chunk, uint8_t finalize);
ASTRAL_API AstralErr ASTRAL_CALL astral_session_decode(AstralHandle session);
ASTRAL_API int32_t ASTRAL_CALL astral_stream_read(AstralHandle session, AstralMutSpanU8 out_buf, uint32_t timeout_ms);
ASTRAL_API AstralErr ASTRAL_CALL astral_embed_create(AstralHandle model, AstralHandle* out_embedder);
ASTRAL_API void ASTRAL_CALL astral_embed_destroy(AstralHandle emb);
ASTRAL_API AstralErr ASTRAL_CALL astral_embed_enqueue(AstralHandle emb, AstralSpanU8 text, uint64_t* out_ticket);
ASTRAL_API AstralErr ASTRAL_CALL astral_embed_collect(AstralHandle emb, uint64_t ticket, AstralMutSpanU8 out_vector);