plugins/unity/Runtime/AstralNative.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_model_caps(AstralHandle model, out ulong out_caps);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_model_limits(AstralHandle model, out AstralModelLimits out_limits);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_model_embedding_dim(AstralHandle model, out uint out_dim);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int astral_tokenize(
            AstralHandle model,
            AstralSpanU8 text,
            int* out_tokens,
            uint max_tokens,
            byte add_special,
            byte parse_special,
            out uint out_count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int astral_detokenize(
            AstralHandle model,
            int* tokens,
            uint count,
            AstralMutSpanU8 out_text,
            out uint out_len);

        // ====================================================================
        // Session
        // ====================================================================

        [StructLayout(LayoutKind.Sequential)]
        public struct AstralSessionDesc
        {
            public AstralHandle model;       // Model handle
            public uint max_tokens;          // Maximum tokens to generate
            public float temperature;        // Sampling temperature
            public uint top_k;               // Top-K sampling
            public float top_p;              // Top-P (nucleus) sampling
            public byte stream_enabled;      // Enable token streaming
            public uint seed;                // RNG seed (0 = auto)
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct AstralSamplerDesc
        {
            public uint size;
            public float temperature;
            public uint top_k;
            public float top_p;
            public float min_p;
            public float typical_p;
            public float repeat_penalty;
            public int repeat_last_n;
            public byte penalize_nl;
            public byte _padding0;
            public byte _padding1;
            public byte _padding2;
            public float presence_penalty;
            public float frequency_penalty;
            public uint mirostat;
            public float mirostat_tau;
            public float mirostat_eta;

            public static AstralSamplerDesc DefaultFromSession(in AstralSessionDesc session)
            {
                return new AstralSamplerDesc
                {
                    size = (uint)Marshal.SizeOf<AstralSamplerDesc>(),
                    temperature = session.temperature,
                    top_k = session.top_k,
                    top_p = session.top_p,
                    min_p = 0.0f,
                    typical_p = 1.0f,
                    repeat_penalty = 1.0f,
                    repeat_last_n = 0,
                    penalize_nl = 0,
                    _padding0 = 0,
                    _padding1 = 0,
                    _padding2 = 0,
                    presence_penalty = 0.0f,
                    frequency_penalty = 0.0f,
                    mirostat = 0,
                    mirostat_tau = 0.0f,
                    mirostat_eta = 0.0f,
                };
            }
        }

        [StructLayout(LayoutKind.Sequential)]
        public unsafe struct AstralTokenMeta
        {
            public uint token_id;
            public uint top_n;
            public float logprob;
            public fixed uint top_token_ids[ASTRAL_LOGPROBS_MAX];
            public fixed float top_logprobs[ASTRAL_LOGPROBS_MAX];
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct AstralAdapterDesc
        {
            public uint size;
            public AstralSpanU8 path;
        }

        /// <summary>
        /// Create an inference session.
        /// Thread-safety: Safe to call from multiple threads.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_create(ref AstralSessionDesc desc, out AstralHandle out_session);

        /// <summary>
        /// Destroy a session.
        /// Thread-safety: Not thread-safe; must not be in use.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void astral_session_destroy(AstralHandle session);

        /// <summary>
        /// Feed a prompt chunk.
        /// Thread-safety: Not thread-safe; single-threaded access per session.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_feed(AstralHandle session, AstralSpanU8 prompt_chunk, byte finalize);

        /// <summary>
        /// Start decoding (non-blocking).
        /// Thread-safety: Not thread-safe; single-threaded access per session.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_decode(AstralHandle session);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_cancel(AstralHandle session);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_state(AstralHandle session, out uint out_state);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_wait(AstralHandle session, uint timeout_ms);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_reset(AstralHandle session, ref AstralSessionDesc desc);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_set_sampler(AstralHandle session, ref AstralSamplerDesc desc);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int astral_session_penalty_prompt_set_tokens(AstralHandle session, int* tokens, uint count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_stop_clear(AstralHandle session);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_stop_add_utf8(AstralHandle session, AstralSpanU8 utf8);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_stop_set_utf8(AstralHandle session, IntPtr seqs, uint count);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_set_logprobs(AstralHandle session, uint n_probs);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int astral_stream_read_meta(AstralHandle session, AstralTokenMeta* out_events, uint capacity, uint timeout_ms);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_state_size(AstralHandle session, out ulong out_bytes);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_state_save(AstralHandle session, AstralMutSpanU8 out_buf, out ulong out_written);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_state_load(AstralHandle session, AstralSpanU8 state_bytes);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_model_adapter_load(AstralHandle model, ref AstralAdapterDesc desc, out AstralHandle out_adapter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void astral_model_adapter_release(AstralHandle adapter);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_adapters_clear(AstralHandle session);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_adapters_add(AstralHandle session, AstralHandle adapter, float scale);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_set_grammar_gbnf(AstralHandle session, AstralSpanU8 gbnf, AstralSpanU8 root);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_set_grammar_json_schema(AstralHandle session, AstralSpanU8 json_schema);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_clear_grammar(AstralHandle session);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_session_set_slot(AstralHandle session, uint slot_id);

        /// <summary>
        /// Read tokens from stream.
        /// Blocks up to timeout_ms if no data available.
        ///
        /// Thread-safety:
        /// - Safe for a single consumer thread calling this concurrently with the decode worker.
        /// - Not safe to call from multiple consumer threads concurrently.
        ///
        /// Returns: Bytes written (>= 0; 0 = end-of-stream), or error code (< 0).
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_stream_read(AstralHandle session, AstralMutSpanU8 out_buf, uint timeout_ms);

        // ====================================================================
        // Embeddings
        // ====================================================================

        /// <summary>
        /// Create an embeddings handle.
        /// Thread-safety: Safe to call from multiple threads.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_embed_create(AstralHandle model, out AstralHandle out_embedder);

        /// <summary>
        /// Destroy an embeddings handle.
        /// Thread-safety: Not thread-safe; must not be in use.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void astral_embed_destroy(AstralHandle emb);

        /// <summary>
        /// Enqueue text for embedding.
        /// Thread-safety: Safe to call from multiple threads.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_embed_enqueue(AstralHandle emb, AstralSpanU8 text, out ulong out_ticket);

        /// <summary>
        /// Collect embedding vector for a ticket.
        /// Thread-safety: Safe to call from multiple threads.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_embed_collect(AstralHandle emb, ulong ticket, AstralMutSpanU8 out_vector);

        // ====================================================================
        // Statistics
        // ====================================================================
